--- a/indx.html
+++ b/indx.html
@@ -7,4 +7,7 @@
 </head>
 <body>
     <h1> MY LIFE</h1>
-    <P> 
+    <P> My name is Mírian Raquel, I'm 15 years old, I'm Brazilian, I study at the Professor Franscinco Lima school, in the 1st year of high school, and I'm taking a computer course
+
+    </head>
+    </html>
